Added optional array's brackets for mocked data

--- a/config_example.json
+++ b/config_example.json
@@ -8,6 +8,7 @@
     },
     "generation": {
         "chance_of_null_value": 0.15,
-        "chance_of_default_value": 0.3
+        "chance_of_default_value": 0.3,
+        "array_with_brackets": false
     }
 }
